--- a/01-IntroToPython/00-PythonBasics.ipynb
+++ b/01-IntroToPython/00-PythonBasics.ipynb
@@ -66,9 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Addition\n",
@@ -79,9 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Let's have Python report the results from three operations at the same time\n",
@@ -94,9 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# If we have all of our operations in the last line of the cell, Jupyter will print them together\n",
@@ -107,9 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# And let's compare values\n",
@@ -151,9 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Let's perform an operation on the variables\n",
@@ -164,9 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Variables can have many different kinds of names\n",
@@ -195,9 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# The iconic string\n",
@@ -222,9 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Try out arithmetic operations.\n",
@@ -237,9 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Unlike a number that consists of a single value, a string is an ordered\n",
@@ -251,15 +233,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## EX. How long is the string below?\n",
-    "\n",
-    "this_string = \"It was the best of times; it was the worst of times.\"\n",
-    "len(this_string)"
+    "this_string = \"It was the best of times; it was the worst of times.\"\n"
    ]
   },
   {
@@ -307,9 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## Q. Predict what will happen when we perform the following operations\n",
@@ -321,9 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# As with a string, we can find out the length of a list\n",
@@ -334,9 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Sometimes we just want a single value from the list at a time\n",
@@ -349,9 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Or maybe we want the first few\n",
@@ -377,9 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# And python is smart with numbers, so we can add them easily!\n",
@@ -390,16 +358,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## EX. Concatenate 'list1' and 'list2' into a single list.\n",
     "##     Retrieve the third element from the combined list.\n",
-    "##     Retrieve the fourth through sixth elements from the combined list.\n",
-    "new_list = list1+list2\n",
-    "new_list[3:]"
+    "##     Retrieve the fourth through sixth elements from the combined list."
    ]
   },
   {
@@ -443,9 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# We saw the 'endswith' method at the very beginning\n",
@@ -457,9 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# We can check whether the string is a letter or a number\n",
@@ -472,9 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# When there are multiple characters, it checks whether *all*\n",
@@ -486,9 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Similarly, we can check whether the string is lower or upper case\n",
@@ -499,9 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Sometimes we want not just to check, but to change the string\n",
@@ -512,9 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# The case of the string hasn't changed!\n",
@@ -525,9 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# But if we want to permanently make it lower case we re-assign it\n",
@@ -540,9 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Oh hey. And strings are kind of like lists, so we can slice them similarly\n",
@@ -588,11 +536,7 @@
    "source": [
     "new_string = \"It seems very strange that one must turn back, \\\n",
     "and be transported to the very beginnings of history, \\\n",
-    "in order to arrive at an understanding of humanity as it is at present.\"\n",
-    "\n",
-    "print(greeting[1:8])\n",
-    "new_string_list = new_string.split() \n",
-    "new_string_list"
+    "in order to arrive at an understanding of humanity as it is at present.\""
    ]
   },
   {
@@ -615,9 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 'list1' had contained three words, two of which were in title case.\n",
@@ -629,16 +571,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Or we can include all the words in the list but just take their first letters\n",
     "\n",
-    "[word[0] for word in list1]\n",
-    "for word in list1:\n",
-    "    print(word[0])"
+    "[word[0] for word in list1]"
    ]
   },
   {
@@ -650,15 +588,7 @@
    "outputs": [],
    "source": [
     "## EX. Using the list of words you produced by splitting 'new_string', create\n",
-    "##     a new list that contains only the words whose last letter is \"y\" \n",
-    "y_list = [word for word in new_string_list if word.endswith('y')]\n",
-    "print(y_list)\n",
-    "## EX. Create a new list that contains the first letter of each word.\n",
-    "first_letter = [word[0] for word in new_string_list]\n",
-    "print(first_letter)\n",
-    "## EX. Create a new list that contains only words longer than two letters.\n",
-    "long_words = [word for word in new_string_list if len(word)>2]\n",
-    "print(long_words)"
+    "##     a new list that contains only the words whose last letter is \"y\" "
    ]
   }
  ],
