--- a/01-IntroToPython/01-WorkingWithTexts.ipynb
+++ b/01-IntroToPython/01-WorkingWithTexts.ipynb
@@ -61,7 +61,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#Start writing code here\n",
+    "## Click the \"+\" button above to add new cells."
+   ]
   }
  ],
  "metadata": {
