--- a/01-IntroToPython/01-WorkingWithTexts_ExerciseSolutions.ipynb
+++ b/01-IntroToPython/01-WorkingWithTexts_ExerciseSolutions.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "## Working with Texts in Python\n",
     "\n",
-    "Below is my solution to the exercises posed in the notebook 01.30.01_WorkingWithTexts.  \n",
-    "As a reminder, the exercises posed:"
+    "Below is my solution to the exercises posed in the notebook 01-WorkingWithTexts.  \n",
+    "As a reminder, you were asked to:"
    ]
   },
   {
@@ -26,11 +26,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "austen_string = open('../data/Austen_PrideAndPrejudice.txt').read()\n",
-    "alcott_string = open('../data/Alcott_GarlandForGirls.txt').read()"
+    "austen_string = open('../Data/Austen_PrideAndPrejudice.txt').read()\n",
+    "alcott_string = open('../Data/Alcott_GarlandForGirls.txt').read()"
    ]
   },
   {
