--- a/01-IntroToPython/02-WorkingWithNumbers.ipynb
+++ b/01-IntroToPython/02-WorkingWithNumbers.ipynb
@@ -16,15 +16,17 @@
     "\n",
     "We've started to grapple with numbers, strings, and lists and how they might be used in text analysis. Sometimes we will use these methods to dig deeper into the text - to enable more productive deep readings. Other times we might want to turn text into numbers, either for \"distant reading,\" or even to perform some statistical analyses on the text.\n",
     "\n",
-    "Today we will learn the basics of the Python library pandas, which is designed for (numerical) data analysis. It is similar to spreadsheets, such as those in Excel, or the dataframe in Stata or R, if you have used those. It is my favoriate place to do data/text munging and basic statistics. There are other libraries for more sophisticated statistics in Python.\n",
+    "In this tutorial we will learn the basics of the Python library pandas, which is designed for (numerical) data analysis. It is similar to spreadsheets, such as those in Excel, or the dataframe in Stata or R, if you have used those. It is my favoriate place to do data/text munging and basic statistics. There are other libraries for more sophisticated statistics in Python.\n",
     "\n",
-    "Today we will just explore numerical analysis. In the weeks to come we will explore how we can use pandas in the text analysis pipeline.\n",
+    "For now we will just explore numerical analysis. In the days to come we will explore how we can use pandas in the text analysis pipeline.\n",
+    "\n",
+    "Don't worry if you don't get everything right away. Python is a language, a new language for many of you, and learning new languages requires a lot of use before you're comfortable with it. You'll start to feel more comfortable with Python as you use it more.\n",
     "\n",
     "### Learning Goals\n",
     "\n",
     "* Get familiar with the pandas libarary\n",
     "* Learn some basic functions to summarize numerical data\n",
-    "* Have a foundation in pandas so we can use it on text as data in the weeks to come\n",
+    "* Have a foundation in pandas so we can use it on text as data in the days to come\n",
     "\n",
     "### Outline\n",
     "\n",
@@ -72,7 +74,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a list of three sub-lists, each with two entries.\n",
@@ -115,7 +119,7 @@
     "# We can create a list for our column labels to add to our dataframe\n",
     "\n",
     "column_names = ['income', 'education']\n",
-    "row_names = ['Laura', 'Heather', 'KT']\n"
+    "row_names = ['Laura', 'Hovig', 'Ashley']\n"
    ]
   },
   {
@@ -193,7 +197,7 @@
    "source": [
     "# Call up a couple of rows, using a list of indices\n",
     "\n",
-    "df.loc[['Laura','Heather']]"
+    "df.loc[['Laura','Hovig']]"
    ]
   },
   {
@@ -221,7 +225,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a new column\n",
@@ -250,7 +256,7 @@
     "\n",
     "## CHALLENGE: Call up both entries at the same time\n",
     "\n",
-    "df.loc['Heather'][['income', 'education']]\n"
+    "df.loc['Hovig'][['income', 'education']]\n"
    ]
   },
   {
@@ -414,7 +420,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# EX: .sum() adds the values in a column. .mean() calculates the mean value in a column.\n",
@@ -445,7 +453,7 @@
    "outputs": [],
    "source": [
     "#we'll assign it to the variable name df again, to keep things consistent\n",
-    "df = pandas.read_csv(\"../data/nsfg_data1.csv.bz2\", compression='bz2', index_col = 0)\n",
+    "df = pandas.read_csv(\"../Data/nsfg_data1.csv.bz2\", compression='bz2', index_col = 0)\n",
     "#view our data. Note: 'NaN' indicates the value is missing\n",
     "df"
    ]
@@ -520,7 +528,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## EX: Create a new grouped by dataframe, called 'grouped_new', that groups the dataframe by pregordr\n",
@@ -530,7 +540,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## EX: Sort this new grouped by dataframe by the age at pregnancy, in descending order\n",
