--- a/02-IntroToNLP/00-IntroToNLP_ExerciseSolution.ipynb
+++ b/02-IntroToNLP/00-IntroToNLP_ExerciseSolution.ipynb
@@ -15,9 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import nltk\n",
@@ -26,8 +24,8 @@
     "from nltk.corpus import stopwords\n",
     "\n",
     "#open and read the novels, save them as variables\n",
-    "austen_string = open('../data/Austen_PrideAndPrejudice.txt', encoding='utf-8').read()\n",
-    "alcott_string = open('../data/Alcott_GarlandForGirls.txt', encoding='utf-8').read()"
+    "austen_string = open('../Data/Austen_PrideAndPrejudice.txt', encoding='utf-8').read()\n",
+    "alcott_string = open('../Data/Alcott_GarlandForGirls.txt', encoding='utf-8').read()"
    ]
   },
   {
@@ -156,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5. Bonus: Concordances\n",
+    "### 5. Bonus: Concordances (if time)\n",
     "\n",
     "The NLTK package has many built-in functions for natural language processing. I encourage you to explore the full range of techniques available. I'll go over two more here: concordance() and similar().\n",
     "\n",
@@ -169,8 +167,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "marx_string = open('../data/Marx_CommunistManifesto.txt', encoding='utf-8').read()\n",
-    "prince_string = open('../data/Machiavelli_ThePrince.txt', encoding='utf-8').read()\n",
+    "marx_string = open('../Data/Marx_CommunistManifesto.txt', encoding='utf-8').read()\n",
+    "prince_string = open('../Data/Machiavelli_ThePrince.txt', encoding='utf-8').read()\n",
     "\n",
     "marx_list = word_tokenize(marx_string)\n",
     "prince_list = word_tokenize(prince_string)\n",
