--- a/02-IntroToNLP/01-POS_Tagging.ipynb
+++ b/02-IntroToNLP/01-POS_Tagging.ipynb
@@ -209,12 +209,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "##Ex: Print the most frequent nouns, adjective, and verbs in the sentence\n",
     "######What does this tell us?\n",
-    "######Compare this to what we did yesterday with removing stop words."
+    "######Compare this to what we did earlier with removing stop words."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "##Ex: Compare the most frequent part-of-speech used in two of the texts in our data folder"
    ]
   }
  ],
