--- a/02-IntroToNLP/01-POS_Tagging_ExerciseSolutions.ipynb
+++ b/02-IntroToNLP/01-POS_Tagging_ExerciseSolutions.ipynb
@@ -6,7 +6,43 @@
    "source": [
     "# Exercise solution for POS Tagging\n",
     "\n",
-    "Ex: Compare the most frequent part-of-speech used in two of the texts in our data folder\n"
+    "EX1: Print the most frequent nouns, adjective, and verbs in the sentence\n",
+    "EX2: Compare the most frequent part-of-speech used in two of the texts in our data folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import nltk\n",
+    "from nltk import word_tokenize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#EX1: Print the most frequent nouns, adjective, and verbs in the sentence\n",
+    "#First recreate what we did\"\n",
+    "\n",
+    "sentence=\"For me it has to do with the work that gets done at the crossroads of \\\n",
+    "digital media and traditional humanistic study. And that happens in two different ways. \\\n",
+    "On the one hand, it's bringing the tools and techniques of digital media to bear \\\n",
+    "on traditional humanistic questions; on the other, it's also bringing humanistic modes \\\n",
+    "of inquiry to bear on digital media.\"\n",
+    "sentence_tokens = word_tokenize(sentence)\n",
+    "tagged_sentence_tokens = nltk.pos_tag(sentence_tokens)\n",
+    "adjectives = [word for (word,pos) in tagged_sentence_tokens if pos == 'JJ' or pos=='JJR' or pos=='JJS']\n",
+    "nouns = [word for (word,pos) in tagged_sentence_tokens if pos=='NN' or pos=='NNS']\n",
+    "verbs = [word for (word,pos) in tagged_sentence_tokens if pos in ['VB', 'VBD','VBG','VBN','VBP','VBZ']]"
    ]
   },
   {
@@ -15,12 +51,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import nltk\n",
-    "from nltk import word_tokenize\n",
+    "#Print most frequent nouns, adjective, and verbs\n",
+    "nouns_frequency = nltk.FreqDist(tagged_sentence_tokens)\n",
+    "print(\"Most Frequent Nouns:\")\n",
+    "print(nouns_frequency.most_common())\n",
+    "adj_frequency = nltk.FreqDist(tagged_sentence_tokens)\n",
+    "print()\n",
+    "print(\"Most Frequent Adjectives:\")\n",
+    "print(adj_frequency.most_common())\n",
+    "verbs_frequency = nltk.FreqDist(tagged_sentence_tokens)\n",
+    "print()\n",
+    "print(\"Most Frequent Verbs:\")\n",
+    "print(verbs_frequency.most_common())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#EX2: Compare the most frequent part-of-speech used in two of the texts in our data folder\n",
     "\n",
     "#open and read the novels, save them as variables\n",
-    "austen_string = open('../data/Austen_PrideAndPrejudice.txt', encoding='utf-8').read()\n",
-    "alcott_string = open('../data/Alcott_GarlandForGirls.txt', encoding='utf-8').read()\n",
+    "austen_string = open('../Data/Austen_PrideAndPrejudice.txt', encoding='utf-8').read()\n",
+    "alcott_string = open('../Data/Alcott_GarlandForGirls.txt', encoding='utf-8').read()\n",
     "\n",
     "#tokenize, then tag each word with its part of speech\n",
     "austen_tokens = word_tokenize(austen_string)\n",
@@ -38,44 +93,6 @@
     "\n",
     "print(\"Frequent Part of Speech tags in Alcott\")\n",
     "print(alcott_tag_freq.most_common(10))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ex: Compare the *number* of organizations and people mentioned in two of the texts in our data folder."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#use the named entity chunker to tag named entities\n",
-    "austen_chunked = nltk.ne_chunk(austen_tokens_tagged)\n",
-    "alcott_chunked = nltk.ne_chunk(alcott_tokens_tagged)\n",
-    "\n",
-    "print(\"Number of people mentioned in Austen\")\n",
-    "print(len([n for n in austen_chunked.subtrees() if n.label()==\"PERSON\"]))\n",
-    "print(\"Number of orgs mentioned in Austen\")\n",
-    "print(len([n for n in austen_chunked.subtrees() if n.label()==\"ORGANIZATION\"]))\n",
-    "print()\n",
-    "print(\"Number of people mentioned in Alcott\")\n",
-    "print(len([n for n in alcott_chunked.subtrees() if n.label()==\"PERSON\"]))\n",
-    "print(\"Number of orgs mentioned in Alcott\")\n",
-    "orgs = (len([n for n in alcott_chunked.subtrees() if n.label()==\"ORGANIZATION\"]))\n",
-    "print(org/len(alcott_tokens))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(orgs/len(alcott_tokens))"
    ]
   }
  ],
