--- a/03-Pandas_and_DTM/00-PandasAndTextAnalysis.ipynb
+++ b/03-Pandas_and_DTM/00-PandasAndTextAnalysis.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Combining Pandas and Text Analysis\n",
     "\n",
-    "We have learned how to work with numbers in the Python package pandas, and how to work with text in Python using built in Python packages, and later the NLTK package. To operationalize concepts and analyze the numbers, we can combine these two packages together.\n",
+    "We have learned how to work with numbers in the Python package pandas, and how to work with text in Python using built-in Python functions and using the NLTK package. To operationalize concepts and analyze the numbers, we can combine these two packages together.\n",
     "\n",
     "### Learning Goals\n",
     "\n",
@@ -75,9 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas\n",
@@ -102,9 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = df.dropna(subset=[\"text\"])\n",
@@ -114,9 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "##Ex: Print the first text in the dataframe (starts with \"A DOG WITH A BAD NAME\"). \n",
@@ -143,9 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(df.describe()) #get descriptive statistics for all numerical columns\n",
@@ -169,9 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#creat a pandas object that is a groupby dataframe, grouped on author gender\n",
@@ -189,9 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "grouped_gender['text'].count().plot(kind = 'bar')\n",
@@ -201,9 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Ex: Create a variable called 'grouped_year' that groups the dataframe by year.\n",
@@ -223,9 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "grouped_year['text'].count().plot(kind = 'line')\n",
@@ -242,9 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.ticklabel_format(useOffset=False) #forces Python to not convert numbers\n",
@@ -273,15 +255,15 @@
    "source": [
     "Luckily for us, pandas has an attribute called 'str' which allows us to access Python's built-in string functions.\n",
     "\n",
-    "For example, we can make the text lowercase, and assign this to a new column."
+    "For example, we can make the text lowercase, and assign this to a new column.\n",
+    "\n",
+    "Note: You may get a \"SettingWithCopyWarning\" highlighted with a pink background. This is not an error, it is Python telling you that while the code is valid, you might be doing something stupid. In this case, the warning is a false positive. In most cases you should read the warning carefully and try to fix your code."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df['text_lc'] = df['text'].str.lower()\n",
@@ -291,16 +273,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "##Ex: create a new column, 'text_split', that contains the lower case text split into list. \n",
-    "####HINT: split on white space, don't tokenize it.\n",
-    "\n",
-    "df['text_split'] = df['text_lc'].str.split()\n",
-    "df"
+    "####HINT: split on white space, don't tokenize it."
    ]
   },
   {
@@ -326,7 +303,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -345,9 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df['word_count'].mean()"
@@ -363,27 +337,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "###Ex: print the average novel length for male authors and female authors.\n",
-    "###### What conclusions might you draw from this?\n",
-    "\n",
-    "###Ex: graph the average novel length by gender\n",
-    "\n",
-    "grouped_gender = df.groupby('author gender')\n",
-    "print(grouped_gender['word_count'].mean())\n",
-    "grouped_gender['word_count'].mean().plot(kind='bar')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "What if we want to put error bars on this? We can add a 'yerr' option to our graph, and use the std() calculation to add error bars."
+    "###### What conclusions might you draw from this?"
    ]
   },
   {
@@ -394,9 +352,18 @@
    },
    "outputs": [],
    "source": [
-    "grouped_gender = df.groupby('author gender')\n",
-    "grouped_gender['word_count'].mean().plot(kind = 'bar', yerr = grouped_gender['word_count'].std())\n",
-    "plt.show()"
+    "###Ex: graph the average novel length by gender"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "##EX: Add error bars to your graph"
    ]
   },
   {
@@ -428,14 +395,16 @@
    "metadata": {},
    "source": [
     "<a id='lambda'></a>\n",
-    "### 4. The lambda function"
+    "### 4. Applying NLTK Functions and the lambda function"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we wanted to use nltk or list comprehension on the split text, we have to introduce one more Python trick: the lambda function. This simply allows us to write our own function to apply to each row in our dataframe. For example, we may want tokenize our text instead of splitting on the white space. To do this we can use the lambda function.\n",
+    "If we want to apply nltk functions we can do so using .apply().  If we want to use list comprehension on the split text, we have to introduce one more Python trick: the lambda function. This simply allows us to write our own function to apply to each row in our dataframe. For example, we may want tokenize our text instead of splitting on the white space. To do this we can use the lambda function.\n",
+    "\n",
+    "Note: If you want to explore lambda functions more, see the notebook titled `A-Bonus_LambdaFunctions.ipynb` in this folder.\n",
     "\n",
     "Because of the length of the novels tokenizing the text takes a bit of time. We'll instead tokenize the title only."
    ]
@@ -443,14 +412,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "df['tokens_new'] = df['title'].apply(nltk.word_tokenize)\n",
-    "#df['tokens'] = df['title'].apply(lambda x: nltk.word_tokenize(x))\n",
-    "df[['tokens_new','tokens']]"
+    "df['title_tokens'] = df['title'].apply(nltk.word_tokenize)\n",
+    "df['title_tokens']"
    ]
   },
   {
@@ -463,13 +429,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "df['tokens_clean'] = df['tokens'].apply(lambda x: [word for word in x if word not in list(string.punctuation)])\n",
-    "df['tokens_clean']"
+    "df['title_tokens_clean'] = df['title_tokens'].apply(lambda x: [word for word in x if word not in list(string.punctuation)])\n",
+    "df['title_tokens_clean']"
    ]
   },
   {
@@ -490,9 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "novels = df['text'].tolist()\n",
@@ -502,12 +464,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#turn all of the novels into one long string\n",
+    "#turn all of the novels into one long string using the join function\n",
     "cat_novels = ''.join(n for n in novels)\n",
     "print(cat_novels[:100])"
    ]
@@ -517,7 +477,7 @@
    "metadata": {},
    "source": [
     "<a id='exercise'></a>\n",
-    "### 6. Exercise: Average TTR"
+    "### 6. Exercise: Average TTR (if time, otherwise do on your own)"
    ]
   },
   {
