--- a/03-Pandas_and_DTM/00-PandasAndTextAnalysis_ExerciseSolutions.ipynb
+++ b/03-Pandas_and_DTM/00-PandasAndTextAnalysis_ExerciseSolutions.ipynb
@@ -6,19 +6,13 @@
    "source": [
     "# Exericse Solution for Pandas and Text Analysis\n",
     "\n",
-    "**Motivating Question: Is there a difference in the average TTR for male and female authors?**\n",
-    "\n",
-    "To answer this, go step by step.\n",
-    "\n",
-    "First, I need to read in the data and recreate what we did in the tutorial."
+    "First recreate our dataframe (df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas\n",
@@ -38,9 +32,78 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Ex: create a new column, 'text_split', that contains the lower case text split into list. \n",
+    "####HINT: split on white space, don't tokenize it.\n",
+    "\n",
+    "df['text_split'] = df['text_lc'].str.split()\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###Ex: print the average novel length for male authors and female authors.\n",
+    "###### What conclusions might you draw from this?\n",
+    "\n",
+    "###Ex: graph the average novel length by gender\n",
+    "\n",
+    "grouped_gender = df.groupby('author gender')\n",
+    "print(grouped_gender['word_count'].mean())\n",
+    "grouped_gender['word_count'].mean().plot(kind='bar')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#What if we want to put error bars on this? We can add a 'yerr' option to our graph, and use the std() calculation to add error bars.\n",
+    "grouped_gender = df.groupby('author gender')\n",
+    "grouped_gender['word_count'].mean().plot(kind = 'bar', yerr = grouped_gender['word_count'].std())\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Ex: plot the average novel length by year, with error bars. \n",
+    "#Your x-axis should be year, and your y-axis number of words.\n",
+    "plt.ticklabel_format(useOffset=False) #forces Python to not convert numbers\n",
+    "grouped_year = df.groupby('year')\n",
+    "grouped_year['word_count'].mean().plot(kind = 'line', yerr = grouped_gender['word_count'].std())\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Last Exercise:\n",
+    "\n",
+    "**Motivating Question: Is there a difference in the average TTR for male and female authors?**\n",
+    "\n",
+    "To answer this, go step by step.\n",
+    "\n",
+    "For computational reasons we will use the list we created by splitting on white spaces rather than tokenized text. So this is approximate only.\n",
+    "\n",
+    "We first need to count the token type in each novel. We can do this in two steps. First, create a column that contains a list of the unique token types, by applying the set function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "##Ex: create a new column, 'text_type', which contains a list of unique token types\n",
@@ -51,9 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "##Ex: create a new column, 'type_count', which is a count of the token types in each novel.\n",
@@ -67,9 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "##Ex: Print the average ttr by author gender\n",
